--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
     --footer-accent-color:  #f4f4fd;
     --portfolio-body-color: #434455;
     --portfolio-btn-background: #F4F4FD;
+    --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /**---------Index.html----------*/
@@ -82,7 +83,7 @@ img {
 
 .header-nav {
     display: flex;
-    flex-grow: 1;
+    margin-right: auto;
     align-items: center;
 }
 
@@ -99,11 +100,27 @@ img {
     color: var(--title-menu-color);
     padding-top: 24px;
     padding-bottom: 24px;
+    transition: color var(--transition);
 }
 
 .header-menu-link:hover,
 .header-menu-link:focus {
     color: #404BBF;
+}
+
+.current {
+    position: relative;
+}
+
+.current:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #404BBF;
 }
 
 .header-address {
@@ -120,6 +137,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--main-text-color);
+    transition: color var(--transition);
 }
 
 .header-address-link:hover,
@@ -131,10 +149,18 @@ img {
 
 .hero {
     background-color: var(--hero-footer-background-color);
-    width: 100%;
+    background-image: url(../images/people-office.jpg);
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/people-office.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    max-width: 1440px;
     padding-top: 188px;
     padding-bottom: 188px;
-    box-sizing: border-box;
 }
 
 .hero-container {
@@ -168,17 +194,16 @@ img {
     color: #FFFFFF;
     background-color: #4D5AE5;
     cursor: pointer;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
-    margin: 0;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto;
+    transition: background-color var(--transition), box-shadow var(--transition);
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
-    background: #404BBF;
+    background-color: #404BBF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 /**---------Benefits----------*/
@@ -200,14 +225,25 @@ img {
     clip: rect(0 0 0 0);
     overflow: hidden;
   }
-
+ 
 .benefits-list {
     display: flex;
     gap: 24px;
 }
 
+.benefits-item-block {
+    width: 264px;
+    height: 112px;
+    background-color: #F4F4FD;
+    border-radius: 4px;
+    margin-bottom: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+
 .benefits-item {
-    width: calc((100%-72px/4));
+    width: calc((100% - 72px/4));
 }
 
 .benefits-item-subtitle {
@@ -280,7 +316,9 @@ img {
 .team-item {
     background-color: #FFFFFF;
     width: calc((100%-72px)/4);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+                0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+                0px 1px 6px 0px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
 }
 
@@ -303,6 +341,79 @@ img {
     letter-spacing: 0.02em;
     color: var(--main-text-color);
     text-align: center;
+    margin-bottom: 8px;
+}
+
+.team-soc {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    justify-content: center;
+}
+
+.team-soc-link span {
+    width: 40px;
+    height: 40px;
+    background-color: #404BBF;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.team-soc-icon {
+
+}
+
+/**---------Customers----------*/
+
+.customers {
+    padding-bottom: 120px;
+}
+
+.customers-title {
+    margin-bottom: 72px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--title-menu-color);
+    text-align: center;
+}
+
+.customers-list {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    justify-content: center;
+}
+
+.customers-item {
+    width: calc((100% - 120px)/6);
+}
+
+.customers-item-link span {
+    padding: 16px 32px;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
+    display: flex;
+    transition: border-color var(--transition);
+}
+
+.customers-item-icon {
+    fill: #8E8F99;
+    transition: fill var(--transition);
+}
+
+.customers-item-link:hover span, 
+.customers-item-link:focus span {
+    border-color: #404BBF;
+} 
+
+.customers-item-link:hover .customers-item-icon, 
+.customers-item-link:focus .customers-item-icon {
+    fill: #404BBF;
 }
 
 /**---------Footer----------*/
@@ -313,6 +424,10 @@ img {
     padding-bottom: 100px;
 }
 
+.footer-container {
+    position: relative;
+}
+
 .footer-logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -321,7 +436,6 @@ img {
     letter-spacing: 0.03em;
     color: var(--logo-color);
     text-transform: uppercase;
-   
     margin-bottom: 16px;
 }
 
@@ -338,6 +452,94 @@ img {
     letter-spacing: 0.02em;
     color: var(--footer-text-color);
     max-width: 264px;
+}
+
+.footer-soc {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 384px;
+}
+
+.footer-soc-text {
+    color: #FFFFFF;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.footer-soc-list {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+}
+
+.footer-soc-link span {
+    width: 40px;
+    height: 40px;
+    background-color: #404BBF;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color var(--transition);
+}
+
+.footer-soc-icon {
+
+}
+
+.footer-soc-link:hover span, 
+.footer-soc-link:focus span {
+    background-color: #31D0AA;
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    transition: opacity  var(--transition), visibility var(--transition);
+}
+ 
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform var(--transition);
+    width: 408px;
+    min-height: 584px;
+    background-color: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px; 
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0);
+}
+
+.modal-btn {
+    position: absolute;
+    right: 24px;
+    top: 24px;
+    width: 24px;
+    height: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #E7E9FC;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
 }
 
 /**---------Portfolio.html----------*/
@@ -432,28 +634,44 @@ body {
     padding-right: 24px;
     border: 1px solid #e7e9fc;
     border-radius: 4px;
+    transition: color var(--transition), background-color var(--transition), border var(--transition), box-shadow var(--transition);
 }
 
 .section-btn:hover,
 .section-btn:focus {
     color: #FFFFFF;
-    background: #404BBF;
+    background-color: #404BBF;
     border: 1px solid transparent;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
-.link {
-    display: block;
-}
-
-.examples {
+.examples-list {
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
 }
 
-.examples-list {
-    width: calc((100% - 48px) / 3); 
+.examples-item {
+    width: calc((100% - 48px) / 3);
+}
+
+.examples-item-link {
+    display: block;
+    transition: box-shadow var(--transition);
+}
+
+.examples-cover-div {
+    position: relative;
+    overflow: hidden;
+}
+
+.examples-item:hover .products-cover-block {
+    transform: translate(0);
+}
+
+.examples-item-link:hover {
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .examples-container {
@@ -472,10 +690,26 @@ body {
 }
 
 .examples-text {
-    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--main-text-color);
+}
+
+.products-cover-block {
+    position: absolute;
+    background-color: #4D5AE5;
+    top: 0;
+    left: 0;
+    padding: 40px 32px 164px 32px;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform var(--transition);
+}
+
+.products-cover-text {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
 }
 
 /**---------Footer----------*/
