--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,7 @@ img {
 
 .current {
     position: relative;
+    color: #404bbf;
 }
 
 .current:after {
@@ -323,7 +324,7 @@ img {
 }
 
 .team-item-container {
-    padding: 32px 16px;
+    padding: 32px 0 32px;
 }
 
 .team-item-subtitle {
@@ -369,7 +370,7 @@ img {
 
 .team-soc-link:hover, 
 .team-soc-link:focus {
-    background-color: #31D0AA;
+    background-color: #404bbf;
 }
 
 .team-soc-icon {
@@ -413,6 +414,8 @@ img {
     border: 1px solid #8E8F99;
     border-radius: 4px;
     display: flex;
+    align-items: center;
+    justify-content: center;
     color:  #8E8F99;
     transition: border-color var(--transition), color var(--transition);
 }
@@ -423,13 +426,9 @@ img {
 
 .customers-item-link:hover, 
 .customers-item-link:focus {
+    color: #404BBF;
     border-color: #404BBF;
 } 
-
-.customers-item-link:hover .customers-item-icon, 
-.customers-item-link:focus .customers-item-icon {
-    fill: #404BBF;
-}
 
 /**---------Footer----------*/
 
