--- a/css/styles.css
+++ b/css/styles.css
@@ -554,7 +554,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color var(--transition), border var(--transition), color var(--transition); 
+    transition: background-color var(--transition), border var(--transition); 
 }
 
 .modal-btn:hover,
@@ -572,6 +572,7 @@ img {
 
 .icon-close-black {
     fill: currentColor;
+    transition: fill var(--transition);
 }
 
 /**---------Portfolio.html----------*/
@@ -665,7 +666,6 @@ body {
     padding-right: 24px;
     border: 1px solid #e7e9fc;
     border-radius: 4px;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); 
     transition: color var(--transition), background-color var(--transition), border-color var(--transition), box-shadow var(--transition);
 }
 
@@ -674,7 +674,7 @@ body {
     color: #FFFFFF;
     background-color: #404BBF;
     border: 1px solid transparent;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); 
 }
 
 .examples-list {
@@ -690,13 +690,13 @@ body {
 
 .examples-item-link {
     display: block;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transition: box-shadow var(--transition);
 }
 
 .examples-item-link:hover,
 .examples-item-link:focus {
-    transform: translateY(0%);
+    transform: translate(0%);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .examples-cover-div {
@@ -706,11 +706,6 @@ body {
 
 .examples-item:hover .products-cover-block {
     transform: translate(0);
-}
-
-.examples-item-link:hover,
-.examples-item-link:focus {
-    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .examples-container {
