--- a/css/styles.css
+++ b/css/styles.css
@@ -580,7 +580,7 @@ img {
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--portfolio-body-color);
-}c
+}
 /**---------Header----------*/
 
 .header-logo {
@@ -602,6 +602,11 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--title-menu-color);
+}
+
+.current {
+    position: relative;
+    color: #404bbf;
 }
 
 .header-menu-link:hover,
